--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "three": "^0.165.0"
+    "three": "^0.165.0",
+    "three-stdlib": "^2.30.3"
   }
 }
